// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render GroupListPage with one group 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Groups
      </h1>
      <button
        className="button button--norm page-header__actions"
        onClick={[Function]}
      >
        Add New Group
      </button>
    </div>
  </div>
  <div
    className="content-container"
  >
    <div
      className="grouplist"
      key="one"
    >
      <Link
        className="button--link-black"
        to="/groups/one"
      >
        <h2
          className="groupitem"
        >
          nameOne
        </h2>
      </Link>
    </div>
  </div>
  <Connect(AddGroupModal)
    isOpen={false}
    onRequestClose={[Function]}
  />
</div>
`;

exports[`render should render GroupListPage with two groups 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Groups
      </h1>
      <button
        className="button button--norm page-header__actions"
        onClick={[Function]}
      >
        Add New Group
      </button>
    </div>
  </div>
  <div
    className="content-container"
  >
    <div
      className="grouplist"
      key="one"
    >
      <Link
        className="button--link-black"
        to="/groups/one"
      >
        <h2
          className="groupitem"
        >
          nameOne
        </h2>
      </Link>
    </div>
    <div
      className="grouplist"
      key="two"
    >
      <Link
        className="button--link-black"
        to="/groups/two"
      >
        <h2
          className="groupitem"
        >
          nameTwo
        </h2>
      </Link>
    </div>
  </div>
  <Connect(AddGroupModal)
    isOpen={false}
    onRequestClose={[Function]}
  />
</div>
`;

exports[`render should render GroupListPage without groups 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Groups
      </h1>
      <button
        className="button button--norm page-header__actions"
        onClick={[Function]}
      >
        Add New Group
      </button>
    </div>
  </div>
  <div
    className="content-container"
  >
    <p
      className="list-header__text"
    >
      No groups
    </p>
  </div>
  <Connect(AddGroupModal)
    isOpen={false}
    onRequestClose={[Function]}
  />
</div>
`;
